@@ -1123,10 +1123,15 @@ DO
   frame_draw portrait.sprite, portrait.pal, 262, 8,,,page
  END IF
 
+ '--name
  edgeprint names(pt), 142 - LEN(names(pt)) * 4, 20, uilook(uiText), page
+ '--level and experience
  edgeprint level_caption & " " & gam.hero(pt).lev, 142 - LEN(level_caption & " " & gam.hero(pt).lev) * 4, 30, uilook(uiText), page
- temp$ = (exlev(pt, 1) - exlev(pt, 0)) & " " & exper_caption & " " & readglobalstring$(47, "for next", 10) & " " & level_caption
- edgeprint temp$, 142 - LEN(temp$) * 4, 40, uilook(uiText), page
+ IF gam.hero(pt).lev < gen(genLevelCap) THEN
+  'Can't level further, so hide experience required
+  temp$ = (exlev(pt, 1) - exlev(pt, 0)) & " " & exper_caption & " " & readglobalstring$(47, "for next", 10) & " " & level_caption
+  edgeprint temp$, 142 - LEN(temp$) * 4, 40, uilook(uiText), page
+ END IF
 
  SELECT CASE mode
   CASE 0
