@@ -5,3 +5,5 @@ Navigate with the Up and Down arrow keys (or PgUp, PgDn, Home, and End).
 Use the Left and Right arrow keys to change the values, or just type in a number.
 
 "Damage Cap" refers to the maximum amount of damage that an attack will be allowed to do at once.
+
+"Level Cap" sets the maximum level a hero can reach (bypassable with the "set hero level" command). Note that it does NOT affect the experience required for level-up, or the stat increase curve.
