@@ -868,6 +868,14 @@ script, extended scancodes enabled, begin
   return((readgeneral(177),and,256)<>0)
 end
 
+script, get level cap, begin
+  return(readgeneral(87))
+end
+
+script, set level cap, hsd:cap, begin
+  if(hsd:cap >= 0 && hsd:cap <= 99) then(writegeneral(87, hsd:cap))
+end
+
 #--------------------------------------------------------------------------
 # read/write gmap wrappers
 
