@@ -43,6 +43,7 @@ WHAT IS NEW?
     * New dissolve animations Squeeze, Shrink and Flicker [Ralph]
     * Page up/page down/home/end keys now work in most built-in
       in-game menus [Ralph]
+    * You can set a cap on the maximum hero level, from 0 to 99 [Ralph]
 
   * Bugfixes
     * Bug 749:  Attacks configured to do No Damage still do damage when
@@ -122,6 +123,7 @@ WHAT IS NEW?
     * "mouse click"; you can test the middle mouse button now [Ralph]
     * "extended scancodes enabled" [Ralph]
     * Resolution of "get/set music volume" increased [Ralph]
+    * "get level cap", "set level cap" [Ralph]
 
   * Vikings of Midgard
 
